// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`при клике на кнопку найти отправляет метрику при успехе 1`] = `
Array [
  Array [
    Array [
      "filter",
      "marks",
      "set",
    ],
  ],
  Array [
    Array [
      "filter",
      "price_to",
      "set",
    ],
  ],
  Array [
    Array [
      "filter",
      "marks",
      "send",
    ],
  ],
  Array [
    Array [
      "filter",
      "price_to",
      "send",
    ],
  ],
]
`;

exports[`при клике на кнопку сбросить отправит метрику 1`] = `
Array [
  Array [
    Array [
      "reset-filters",
    ],
  ],
]
`;

exports[`смена фильтра отправляет метрику при смене фильтра 1`] = `
Array [
  Array [
    Array [
      "filter",
      "marks",
      "set",
    ],
  ],
  Array [
    Array [
      "filter",
      "models",
      "set",
    ],
  ],
  Array [
    Array [
      "filter",
      "price_from",
      "set",
    ],
  ],
]
`;
